[Fix #1] Add support for Fast-Planner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   message_generation
   #cv_bridge
-        # for fast:
-        #bspline_opt
+        bspline_opt
         #path_searching
 )
 find_package(Eigen3 REQUIRED)
@@ -36,7 +35,7 @@ generate_messages(
 catkin_package(
  INCLUDE_DIRS include
  LIBRARIES traj_utils 
- CATKIN_DEPENDS message_runtime # for fast: path_searching bspline_opt
+ CATKIN_DEPENDS message_runtime bspline_opt
 #  DEPENDS system_lib
 )
 
@@ -50,11 +49,11 @@ include_directories(
 
 link_directories(${PCL_LIBRARY_DIRS})
 
-add_library( traj_utils
-#        src/planning_visualization_fast.cpp
+add_library(traj_utils
+        src/planning_visualization_fast.cpp
         src/planning_visualization_ego.cpp
     src/polynomial_traj.cpp 
     )
-target_link_libraries( traj_utils
+target_link_libraries(traj_utils
     ${catkin_LIBRARIES} 
     )  
